@@ -11,6 +11,8 @@ Libraries:
   was added.
 - libgwydgets: Wrong x-axis value reported for mouse selection in GwyGraph in
   x-axis logarithmic mode was corrected.
+- libgwydgets: 3D view shows data with non-suqare pixels with the physical
+  aspect ratio.
 - libgwydgets, libgwyapp: 3D view axes drawing can be globally disabled with
   "/app/3d/axes/disable" boolean True
   line in ~/.gwyddion/settings to work around broken OpenGL implementations.
